--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,12 +46,12 @@ body {
 
 body h1 {
   font-family: "Ubuntu", serif;
-  font-size: 2rem;
+  font-size: calc(1rem + 1.2vw);
 }
 
 body p {
   font-family: "Quicksand", sans-serif;
-  font-size: 1.2rem;
+  font-size: calc(1rem + 0.3vw);
 }
 
 body time {
@@ -293,7 +293,8 @@ footer {
   background-color: #ff8906;
   border: 3px solid black;
   height: 60vh;
-  margin: 60px 60px 0px 60px;
+  width: 75ch;
+  margin: 60px auto 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -303,10 +304,10 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   scroll-snap-align: center;
   overflow: hidden;
   -ms-flex-pack: distribute;
@@ -473,6 +474,20 @@ footer {
 #red:hover {
   color: red;
   font-size: 6rem;
+}
+
+#abt-logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#abt-logos .logo {
+  margin: 10px 5px 0 5px;
 }
 
 #about-me {
@@ -941,7 +956,6 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: 20px 30px 0px 30px;
     overflow: hidden;
     height: 80vh;
     -webkit-box-pack: start;
@@ -1172,9 +1186,10 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: 20px 30px 0px 30px;
     overflow: hidden;
     height: 80vh;
+    width: 75ch;
+    margin: auto;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
