--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,8 +7,10 @@ $tertiary-color: #e53170;
 $contrast-color: black;
 $shadow-color: white;
 $nav-color: rgba(36, 36, 36, 0.808);
-$font1: 'Ubuntu', serif;
-$font2: 'Quicksand', sans-serif;
+$font1: 'Ubuntu',
+serif;
+$font2: 'Quicksand',
+sans-serif;
 $nav-speed: 0.3s;
 
 @mixin center {
@@ -16,7 +18,7 @@ $nav-speed: 0.3s;
   align-items: center;
 }
 
-#nav-parent{
+#nav-parent {
   width: 100vw;
   display: flex;
   @include center;
@@ -65,12 +67,12 @@ body {
 
   h1 {
     font-family: $font1;
-    font-size: 2rem;
+    font-size: calc(1rem + 1.2vw);
   }
 
   p {
     font-family: $font2;
-    font-size: 1.2rem;
+    font-size: calc(1rem + 0.3vw);
   }
 
   time {
@@ -90,15 +92,16 @@ nav {
   width: 100%;
   background: $nav-color;
 
-  input{
+  input {
     display: none;
   }
 
-  .menu{
-    div{
+  .menu {
+    div {
       @include center;
     }
   }
+
   ul {
     display: flex;
     list-style: none;
@@ -186,7 +189,7 @@ footer {
   height: 55px;
 }
 
-#home-page{
+#home-page {
   color: $headline-color;
 }
 
@@ -227,9 +230,9 @@ footer {
   scroll-snap-align: center;
 }
 
-.contrast{
-    color: $contrast-color;
-    text-shadow: 0px 1px 2px $shadow-color;
+.contrast {
+  color: $contrast-color;
+  text-shadow: 0px 1px 2px $shadow-color;
 }
 
 .item {
@@ -248,10 +251,11 @@ footer {
   background-color: $secondary-color;
   border: 3px solid black;
   height: 60vh;
-  margin: 60px 60px 0px 60px;
+  width: 75ch;
+  margin: 60px auto 0 auto;
   display: flex;
   @include center;
-  flex-direction: row;
+  flex-direction: column;
   scroll-snap-align: center;
   overflow: hidden;
   justify-content: space-around;
@@ -271,7 +275,7 @@ footer {
     height: 100%
   }
 
-  .portfolio-image{
+  .portfolio-image {
     object-fit: contain;
     width: 100%;
     height: 100%
@@ -398,6 +402,14 @@ footer {
   }
 }
 
+#abt-logos{
+  display: flex;
+  flex-direction: row;
+  .logo{
+    margin: 10px 5px 0 5px;
+  }
+}
+
 #about-me {
   width: 100%;
   min-height: 100vh;
@@ -448,141 +460,147 @@ footer {
     }
   }
 
-nav{
-  input{
-    display: block;
-  }
+  nav {
+    input {
+      display: block;
+    }
 
-  .toggler{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 100px;
-    height: 100px;
-    opacity: 0;
-  }
-  .hamburger{
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-    z-index: 1;
-    width: 60px;
-    height: 60px;
-    padding: 1rem;
-    background: $hamburger-bg-color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .hamburger > div{
-    position: relative;
-    width: 100%;
-    height: 2px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
-
-    // style for top and bottom lines
-    &:before,
-    &:after{
-      content: '';
+    .toggler {
       position: absolute;
-      z-index: 1;
-      top: -10px;
-      width: 100%;
-      height: 2px;
-      background: inherit;
-    }
-    // moves bottom line down
-    &:after{
-      top: 10px;
-    }
-  }
-}
-
-// toggler animation
-nav{
-  .toggler:checked + .hamburger > div{
-    transform: rotate(135deg);
-
-    &:before,
-    &:after{
       top: 0;
-      transform: rotate(90deg);
+      left: 0;
+      z-index: 2;
+      cursor: pointer;
+      width: 100px;
+      height: 100px;
+      opacity: 0;
     }
-  }
-}
 
-// Rotate when hover is checked
-nav{
-  .toggler:checked:hover + .hamburger > div{
-    transform: rotate(225deg);
-  }
-}
-
-// show menu
-nav .toggler:checked ~ .menu{
-  visibility: visible;
-  div{
-    transform: scale(1);
-    transition-duration: $nav-speed;
-    div{
-      opacity: 1;
-      transition: opacity 0.4s ease;
-    }
-  }
-}
-
-nav{
-  height: 0;
-  .menu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div{
-      background: $nav-color;
-      width: 200vw;
-      height: 200vw;
+    .hamburger {
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 10px;
+      z-index: 1;
+      width: 60px;
+      height: 60px;
+      padding: 1rem;
+      background: $hamburger-bg-color;
       display: flex;
-      flex: none;
       align-items: center;
       justify-content: center;
-      transform: scale(0);
+    }
+
+    .hamburger>div {
+      position: relative;
+      width: 100%;
+      height: 2px;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transition: all 0.4s ease;
 
-      div{
-        text-align: center;
-        max-width: 100vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: opacity 0.4s ease;
+      // style for top and bottom lines
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -10px;
+        width: 100%;
+        height: 2px;
+        background: inherit;
+      }
 
-        ul{
-          flex-direction: column;
+      // moves bottom line down
+      &:after {
+        top: 10px;
+      }
+    }
+  }
+
+  // toggler animation
+  nav {
+    .toggler:checked+.hamburger>div {
+      transform: rotate(135deg);
+
+      &:before,
+      &:after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
+  // Rotate when hover is checked
+  nav {
+    .toggler:checked:hover+.hamburger>div {
+      transform: rotate(225deg);
+    }
+  }
+
+  // show menu
+  nav .toggler:checked~.menu {
+    visibility: visible;
+
+    div {
+      transform: scale(1);
+      transition-duration: $nav-speed;
+
+      div {
+        opacity: 1;
+        transition: opacity 0.4s ease;
+      }
+    }
+  }
+
+  nav {
+    height: 0;
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      div {
+        background: $nav-color;
+        width: 200vw;
+        height: 200vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+
+        div {
+          text-align: center;
+          max-width: 100vw;
+          max-height: 100vh;
+          opacity: 0;
+          transition: opacity 0.4s ease;
+
+          ul {
+            flex-direction: column;
+          }
         }
       }
     }
   }
-}
 
-article{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
+  article {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 
   menu {
     li {
@@ -595,23 +613,25 @@ article{
     }
   }
 
-  .item{
+  .item {
     margin: 30px 10px 0px 10px;
     height: 80vh;
     padding: 10px;
   }
 
-  .item-blog{
+  .item-blog {
     flex-direction: column;
     margin: 30px 10px 0px 10px;
     overflow: hidden;
     height: 80vh;
     justify-content: flex-start;
-    .blog-image-container{
-      width:100%;
+
+    .blog-image-container {
+      width: 100%;
       height: 50%;
     }
-    article{
+
+    article {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
@@ -629,16 +649,17 @@ article{
   }
 }
 
-.hidden{
+.hidden {
   visibility: hidden;
 }
 
-@media screen and (max-width: 1366px) and (orientation: portrait){
+//portait tablets
+@media screen and (max-width: 1366px) and (orientation: portrait) {
   *::-webkit-scrollbar {
     display: none;
   }
 
-  form{
+  form {
     justify-content: space-between;
   }
 
@@ -662,141 +683,147 @@ article{
     }
   }
 
-nav{
-  input{
-    display: block;
-  }
+  nav {
+    input {
+      display: block;
+    }
 
-  .toggler{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 100px;
-    height: 100px;
-    opacity: 0;
-  }
-  .hamburger{
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-    z-index: 1;
-    width: 60px;
-    height: 60px;
-    padding: 1rem;
-    background: $hamburger-bg-color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .hamburger > div{
-    position: relative;
-    width: 100%;
-    height: 2px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
-
-    // style for top and bottom lines
-    &:before,
-    &:after{
-      content: '';
+    .toggler {
       position: absolute;
-      z-index: 1;
-      top: -10px;
-      width: 100%;
-      height: 2px;
-      background: inherit;
-    }
-    // moves bottom line down
-    &:after{
-      top: 10px;
-    }
-  }
-}
-
-// toggler animation
-nav{
-  .toggler:checked + .hamburger > div{
-    transform: rotate(135deg);
-
-    &:before,
-    &:after{
       top: 0;
-      transform: rotate(90deg);
+      left: 0;
+      z-index: 2;
+      cursor: pointer;
+      width: 100px;
+      height: 100px;
+      opacity: 0;
     }
-  }
-}
 
-// Rotate when hover is checked
-nav{
-  .toggler:checked:hover + .hamburger > div{
-    transform: rotate(225deg);
-  }
-}
-
-// show menu
-nav .toggler:checked ~ .menu{
-  visibility: visible;
-  div{
-    transform: scale(1);
-    transition-duration: $nav-speed;
-    div{
-      opacity: 1;
-      transition: opacity 0.4s ease;
-    }
-  }
-}
-
-nav{
-  height: 0;
-  .menu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div{
-      background: $nav-color;
-      width: 200vw;
-      height: 200vw;
+    .hamburger {
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 10px;
+      z-index: 1;
+      width: 60px;
+      height: 60px;
+      padding: 1rem;
+      background: $hamburger-bg-color;
       display: flex;
-      flex: none;
       align-items: center;
       justify-content: center;
-      transform: scale(0);
+    }
+
+    .hamburger>div {
+      position: relative;
+      width: 100%;
+      height: 2px;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transition: all 0.4s ease;
 
-      div{
-        text-align: center;
-        max-width: 100vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: opacity 0.4s ease;
+      // style for top and bottom lines
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -10px;
+        width: 100%;
+        height: 2px;
+        background: inherit;
+      }
 
-        ul{
-          flex-direction: column;
+      // moves bottom line down
+      &:after {
+        top: 10px;
+      }
+    }
+  }
+
+  // toggler animation
+  nav {
+    .toggler:checked+.hamburger>div {
+      transform: rotate(135deg);
+
+      &:before,
+      &:after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
+  // Rotate when hover is checked
+  nav {
+    .toggler:checked:hover+.hamburger>div {
+      transform: rotate(225deg);
+    }
+  }
+
+  // show menu
+  nav .toggler:checked~.menu {
+    visibility: visible;
+
+    div {
+      transform: scale(1);
+      transition-duration: $nav-speed;
+
+      div {
+        opacity: 1;
+        transition: opacity 0.4s ease;
+      }
+    }
+  }
+
+  nav {
+    height: 0;
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      div {
+        background: $nav-color;
+        width: 200vw;
+        height: 200vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+
+        div {
+          text-align: center;
+          max-width: 100vw;
+          max-height: 100vh;
+          opacity: 0;
+          transition: opacity 0.4s ease;
+
+          ul {
+            flex-direction: column;
+          }
         }
       }
     }
   }
-}
 
-article{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
+  article {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 
   menu {
     li {
@@ -809,24 +836,25 @@ article{
     }
   }
 
-  .item{
+  .item {
     margin: 30px 10px 0px 10px;
     height: 80vh;
     padding: 10px;
   }
 
-  .item-blog{
+  .item-blog {
     display: flex;
     flex-direction: column;
-    margin: 20px 30px 0px 30px;
     overflow: hidden;
     height: 80vh;
     justify-content: flex-start;
-    .blog-image-container{
-      width:100%;
+
+    .blog-image-container {
+      width: 100%;
       height: 50%;
     }
-    article{
+
+    article {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
@@ -836,8 +864,8 @@ article{
     }
   }
 
-  .form{
-    input{
+  .form {
+    input {
       padding-top: 20px;
     }
   }
@@ -849,12 +877,12 @@ article{
   }
 }
 
-@media screen and (orientation: landscape) and (max-width: 1366px){
+@media screen and (orientation: landscape) and (max-width: 1366px) {
   *::-webkit-scrollbar {
     display: none;
   }
 
-  form{
+  form {
     justify-content: space-between;
   }
 
@@ -878,141 +906,147 @@ article{
     }
   }
 
-nav{
-  input{
-    display: block;
-  }
+  nav {
+    input {
+      display: block;
+    }
 
-  .toggler{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 100px;
-    height: 100px;
-    opacity: 0;
-  }
-  .hamburger{
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-    z-index: 1;
-    width: 60px;
-    height: 60px;
-    padding: 1rem;
-    background: $hamburger-bg-color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .hamburger > div{
-    position: relative;
-    width: 100%;
-    height: 2px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
-
-    // style for top and bottom lines
-    &:before,
-    &:after{
-      content: '';
+    .toggler {
       position: absolute;
-      z-index: 1;
-      top: -10px;
-      width: 100%;
-      height: 2px;
-      background: inherit;
-    }
-    // moves bottom line down
-    &:after{
-      top: 10px;
-    }
-  }
-}
-
-// toggler animation
-nav{
-  .toggler:checked + .hamburger > div{
-    transform: rotate(135deg);
-
-    &:before,
-    &:after{
       top: 0;
-      transform: rotate(90deg);
+      left: 0;
+      z-index: 2;
+      cursor: pointer;
+      width: 100px;
+      height: 100px;
+      opacity: 0;
     }
-  }
-}
 
-// Rotate when hover is checked
-nav{
-  .toggler:checked:hover + .hamburger > div{
-    transform: rotate(225deg);
-  }
-}
-
-// show menu
-nav .toggler:checked ~ .menu{
-  visibility: visible;
-  div{
-    transform: scale(1);
-    transition-duration: $nav-speed;
-    div{
-      opacity: 1;
-      transition: opacity 0.4s ease;
-    }
-  }
-}
-
-nav{
-  height: 0;
-  .menu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div{
-      background: $nav-color;
-      width: 200vw;
-      height: 200vw;
+    .hamburger {
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 10px;
+      z-index: 1;
+      width: 60px;
+      height: 60px;
+      padding: 1rem;
+      background: $hamburger-bg-color;
       display: flex;
-      flex: none;
       align-items: center;
       justify-content: center;
-      transform: scale(0);
+    }
+
+    .hamburger>div {
+      position: relative;
+      width: 100%;
+      height: 2px;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transition: all 0.4s ease;
 
-      div{
-        text-align: center;
-        max-width: 100vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: opacity 0.4s ease;
+      // style for top and bottom lines
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -10px;
+        width: 100%;
+        height: 2px;
+        background: inherit;
+      }
 
-        ul{
-          flex-direction: column;
+      // moves bottom line down
+      &:after {
+        top: 10px;
+      }
+    }
+  }
+
+  // toggler animation
+  nav {
+    .toggler:checked+.hamburger>div {
+      transform: rotate(135deg);
+
+      &:before,
+      &:after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
+  // Rotate when hover is checked
+  nav {
+    .toggler:checked:hover+.hamburger>div {
+      transform: rotate(225deg);
+    }
+  }
+
+  // show menu
+  nav .toggler:checked~.menu {
+    visibility: visible;
+
+    div {
+      transform: scale(1);
+      transition-duration: $nav-speed;
+
+      div {
+        opacity: 1;
+        transition: opacity 0.4s ease;
+      }
+    }
+  }
+
+  nav {
+    height: 0;
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      div {
+        background: $nav-color;
+        width: 200vw;
+        height: 200vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+
+        div {
+          text-align: center;
+          max-width: 100vw;
+          max-height: 100vh;
+          opacity: 0;
+          transition: opacity 0.4s ease;
+
+          ul {
+            flex-direction: column;
+          }
         }
       }
     }
   }
-}
 
-article{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
+  article {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 
   menu {
     li {
@@ -1025,24 +1059,26 @@ article{
     }
   }
 
-  .item{
+  .item {
     margin: 30px 10px 0px 10px;
     height: 80vh;
     padding: 10px;
   }
 
-  .item-blog{
+  .item-blog {
     flex-direction: column;
-    margin: 20px 30px 0px 30px;
     overflow: hidden;
     height: 80vh;
+    width: 75ch;
+    margin: auto;
     justify-content: flex-start;
 
-    .blog-image-container{
-      width:100%;
+    .blog-image-container {
+      width: 100%;
       height: 50%;
     }
-    article{
+
+    article {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
@@ -1052,8 +1088,8 @@ article{
     }
   }
 
-  .form{
-    input{
+  .form {
+    input {
       padding-top: 20px;
     }
   }
